Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123138

QtSvg doesn't support feGaussianBlur

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.3, 6.8.0 FF
    • 6.7.0 Beta3
    • SVG Support
    • None
    • Linux/Wayland
    • c58e6c9f2 (dev), 00fe5a646 (6.7)

      https://www.qt.io/blog/qt-svg-not-so-1.2-tiny-any-more claimed that Qt 6.7 will support <filter> and <feGaussianBlur>. But it doesn't correctly render an SVG containing those elements in my case.

      Attached are:

      1. the source SVG file "alias.svg", extracted from the "Breeze" cursor theme in KDE;
      2. test code "test.cpp";
      3. PNG files rendered by Inkscape, ReSVG, and QtSVG in Qt6.6.2 and Qt6.7beta3

      Both Inkscape and ReSVG render the SVG as expected. Qt 6.6 renders it without the blur effect. While Qt 6.7 renders a blank image.

      test.cpp

        1. alias-inkscape.png
          alias-inkscape.png
          0.4 kB
        2. alias-qt6.6.png
          alias-qt6.6.png
          0.3 kB
        3. alias-qt6.7.png
          alias-qt6.7.png
          0.1 kB
        4. alias-resvg.png
          alias-resvg.png
          0.7 kB
        5. alias.svg
          1 kB
        6. test.cpp
          0.4 kB
        7. default.svg
          7 kB
        8. wait.svg
          4 kB
        9. blur-offset.tar.gz
          20 kB
        10. logseq.svg
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            matthias_rauter Matthias Rauter
            genericity Jin Liu
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes